feat: check_rq_progress

--- a/mydjango/supervisord.conf
+++ b/mydjango/supervisord.conf
@@ -1,6 +1,6 @@
 #  Supervisor 是專為 Linux/UNIX 系統設計的進程管理工具
 [program:django_rqworker]
-command=python %(ENV_HOME)s/manage.py rqworker
+command=python %(ENV_HOME)s/manage.py rqworker default low
 stdout_logfile=/var/log/supervisor/django_rqworker.log
 stderr_logfile=/var/log/supervisor/django_rqworker_err.log
 
